Description: Programatically set a ListBox's "SelectedValue" property. It is not changed. That's because in OListBoxModel::convertFastPropertyValue, case PROPERTY_ID_SELECT_VALUE, _rCurrentValue and _rValue are used where the other should be used. Patch pending Steps to Reproduce: . Actual Results: . Expected Results: . Reproducible: Always User Profile Reset: No Additional Info: User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:45.0) Gecko/20100101 Firefox/45.0
Lionel Elie Mamane committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=4f4b06ce320305413bcac123a27b6f3f14655cdf tdf#106462 old value and new value were swapped It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Lionel Elie Mamane committed a patch related to this issue. It has been pushed to "libreoffice-5-3": http://cgit.freedesktop.org/libreoffice/core/commit/?id=23b8a097090ad544c596e644cf477feb360c9469&h=libreoffice-5-3 tdf#106462 old value and new value were swapped It will be available in 5.3.2. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello Lionel, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
Hi, I can still see this issue in version 5.3.4.2. Setting SelectedValue seems to change the value to NULL if the current value and new value are different. Print oListBox.CurrentValue // current value is "yes" oListBox.SelectedValue = "yes" Print oListBox.CurrentValue // shows as "yes" Print oListBox.CurrentValue // current value is "no" oListBox.SelectedValue = "yes" Print oListBox.CurrentValue // shows as "" (NULL) Thank you.
(In reply to JaeYoung Kim from comment #4) > I can still see this issue in version 5.3.4.2. > Setting SelectedValue seems to change the value to NULL if the current value > and new value are different. This is not the same bug as this one. This bug is that setting SelectedValue does not change the value,. You report that it sets it to NULL, except when setting the same value again.
Thank you for your reply.