tdf#106462 old value and new value were swapped

in

commit 66ccfcd2908445b8194c364c89778056374b02af
Author: Jochen Nitschke <j.nitschke+logerrit@ok.de>
Date:   Fri Oct 21 09:36:10 2016 +0200

    remove use of tryPropertyValue Any specialisation

    Change-Id: I3180cf5b9e63a3da9257b03ba02967a2d5402ec3
    Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

Change-Id: I90dd3f6dba799eec9210dbb7560be105cb50e6d1